Fixed Statick warnings.
Most of the warnings were from chktex and were related to switching from
equations starting/ending with $$ to using equation blocks.

https://tex.stackexchange.com/questions/503/why-is-preferable-to

I also fixed some pylint and lacheck warnings.

--- a/statick_config/rsc/exceptions.yaml
+++ b/statick_config/rsc/exceptions.yaml
@@ -9,3 +9,7 @@ global:
         regex: "Could not open .+"
       - tools: [lacheck]
         regex: "Old style class defined"
+      - tools: [lacheck]
+        regex: "Dots should be ellipsis.+"
+      - tools: [lacheck]
+        regex: ".+see C.10.2"
