--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade numpy
           python -m pip install --upgrade statick-tex
 
       - name: Install tools (Linux)
