Added --check flag to statick so that discovered issues will cause the command to return a non-zero exit code.

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -41,4 +41,4 @@ jobs:
 
       - name: Statick
         run: |
-          statick . --user-paths statick_config --profile tex-profile.yaml
+          statick . --check --user-paths statick_config --profile tex-profile.yaml
